[gd_scene load_steps=4 format=3 uid="uid://n6gjiy5ukiex"]

[ext_resource type="Script" uid="uid://c6b644iln2ses" path="res://objects/wind_wave.gd" id="1_4k4if"]
[ext_resource type="Texture2D" uid="uid://3kpgu24sr6f6" path="res://sprites/WindWave.png" id="1_y6hvp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4k4if"]
radius = 12.0415945

[node name="WindWave" type="Node2D"]
position = Vector2(113, 71)
script = ExtResource("1_4k4if")

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_4k4if")

[node name="WaveSprite" type="Sprite2D" parent="."]
scale = Vector2(0.36, 0.36)
texture = ExtResource("1_y6hvp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4k4if")

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
